--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,6 @@
       referrerpolicy="no-referrer"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -25,7 +24,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="/Restaurant/html/menu.html">Food Menu</a></li>
           <li><a href="#service">Service</a></li>
-          <button><a href=".//book.html">Book-Now</a></button>
+          <button><a href="./book.html">Book-Now</a></button>
         </ul>
         <div class="menu-icon">
           <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
@@ -124,7 +123,7 @@
                   <img
                     style="width: 100%; height: 100%; object-fit: cover"
                     src="https://images.pexels.com/photos/541216/pexels-photo-541216.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    alt=""
+                    alt="food"
                   />
                 </div>
               </div>
@@ -362,7 +361,7 @@
 
         <!-- Bottom Bar -->
         <div class="footer-bottom">
-          <p>&copy; 2025 Your Restaurant. All rights reserved.</p>
+          <p>&copy; 2025 Khmer-Restaurant. All rights reserved.</p>
         </div>
       </footer>
     </section>
